# AI-E-Orchestrator-v1

./: .gitignore  README.md  activation_authorization_dry_run.py  activation_review_dry_run.py  aie_prompt_test.py  command_allowlist.json  dry_run_execution_loop.py  execution_closeout_dry_run.py  execution_permit_dry_run.py  execution_session_dry_run.py  operator_decision_resolution_dry_run.py  operator_handoff_review_dry_run.py  overnight_read_only_comparison_dry_run.py  overnight_read_only_final_analysis_dry_run.py  overnight_read_only_rehearsal_dry_run.py  post_decision_dispatch_dry_run.py  post_dispatch_audit_dry_run.py  pyproject.toml  read_only_live_adapter_dry_run.py  runlog.txt  runs_index.jsonl  runtime_activation_harness.py  session_runner.py  validator_engine_dry_run.py
Tools/: __init__.py  queue_ops.py  run_unity_apply_demo_overlay.ps1  run_unity_apply_healthbar.ps1  run_unity_boot.ps1  run_unity_ci_probe.ps1  run_unity_screenshot.ps1  verify_stability_core.py
agents/: registry.json
ai_e_runtime/: __init__.py  agent_router.py  artifact_writer.py  autonomous_decision.py  capability_intelligence.py  capability_registry.py  content_policy.py  control_commands.py  conversation_router.py  followup_task_evolver.py  heartbeat.py  level_0001_grass_mutation.py  mutation_approval.py  planner.py  planner_task_graph.py  progress.py  real_target_rollback.py  runtime_state.py  scheduler.py  state_store.py  supervisor.py  task_intake.py  time_utils.py  unity_action_executor.py  world_interaction_test_model.py
backlog/: FROZEN_BACKLOG.md  baselines.json  queue.json  (+6 more)
(+218 files in other folders)
