[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-e-orchestrator"
version = "0.1.0"
description = "Local-first AI-E orchestrator for overnight multi-agent workflows"
readme = "README.md"
authors = [{name = "AI-E"}]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "rich>=13.7",
]

[tool.setuptools]
package-dir = {"" = ""}
packages = ["orchestrator", "ai_e_runtime"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "fast: deterministic tests that run without Unity",
    "unity: integration tests that require Unity prefab/preview workflows",
]
